--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.7.1"
   }
 }
