--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
+      - run: npm format:check
+      - run: npm lint
       - run: npm test
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
