fix: GitHub Action to run format-check

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
-      - run: npm format:check
+      - run: npm run format:check
       - run: npm lint
       - run: npm test
       - run: npm run build
