config: add missing script on package.json and GitHub Actions

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci
+      - run: npm run format
       - run: npm run format:check
       - run: npm lint
       - run: npm test
