fix: remove .js extension / extend settings on eslintrc config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,11 @@
     "node": true
   },
   "settings": {
-    "version": "detect"
+    "version": "detect",
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
