--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,11 @@
     "jsx-a11y",
     "react-hooks"
   ],
+  "rules": {
+    "react/prop-types": 0,
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".jsx", ".ts", ".tsx"] }]
+  },
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
@@ -34,3 +39,4 @@
     }
   }
 }
+
