config: rules: props

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "react-hooks"
   ],
   "rules": {
-    "react/prop-types": 0,
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".jsx", ".ts", ".tsx"] }]
   },
