--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,8 @@
     "react-hooks"
   ],
   "rules": {
-    "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "parserOptions": {
     "ecmaVersion": 2022,
