--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.5.0"
   }
 }
