--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@iconify/react": "^3.2.2",
     "@types/simple-peer": "^9.11.4",
+    "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^8.3.4",
     "react-select": "^5.3.2"
   }
