--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.2",
     "@iconify/react": "^3.2.2",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.5",
     "firebase": "^9.8.4",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-redux": "^8.0.2",
