--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/socket.io": "^3.0.2",
     "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-avatar": "^5.0.1",
