--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/socket.io": "^3.0.2",
     "firebase": "^9.8.4",
+    "framer-motion": "^6.3.16",
     "react": "^18.2.0",
     "react-avatar": "^5.0.1",
     "react-dom": "^18.2.0",
