--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
     "@iconify/react": "^3.2.2",
+    "@monaco-editor/react": "^4.4.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
